# novalabs

./: .gitignore  ADMIN_CREATION.md  COSMIC_DASHBOARD.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
client/: sdk.py
hub/: auth.py  config.toml  create_admin.py  database.py  dependencies.py  main.py  models.py  seed_labs.py
hub/data/: .gitkeep
hub/routes/: __init__.py  admin.py  assignments.py  auth.py  courses.py  enrollments.py  labs.py  progress.py  sessions.py  system.py  users.py
tests/: README.md  __init__.py  conftest.py  test_admin.py  test_auth.py  test_labs.py  test_progress.py  test_sdk.py  test_sessions.py
ui/: admin_dash.py  admin_dash.py.old  auth_pages.py  base.py  cosmic_dash.py  main.py  session_manager.py  user_dash.py
